ipq807x: yuncore ax840 update dts: spi and nand memory layout added; base-files: luci feed replaced with branch openwrt-21.02; base-files: root password removed;
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq6018-yuncore-ax840.dts
+++ b/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq6018-yuncore-ax840.dts
@@ -317,6 +317,87 @@
 		linux,modalias = "m25p80", "n25q128a11";
 		spi-max-frequency = <50000000>;
 		use-default-sizes;
+		sector-size = <0x10000>;
+
+		partition@110000 {
+			reg = <0x110000 0x1a0000>;
+			label = "0:QSEE_1";
+		};
+
+		partition@450000 {
+			reg = <0x450000 0x10000>;
+			label = "0:DEVCFG_1";
+		};
+
+		partition@460000 {
+			reg = <0x460000 0x10000>;
+			label = "0:DEVCFG";
+		};
+
+		partition@470000 {
+			reg = <0x470000 0x40000>;
+			label = "0:RPM_1";
+		};
+
+		partition@500000 {
+			reg = <0x500000 0x10000>;
+			label = "0:CDT";
+		};
+
+		partition@510000 {
+			reg = <0x510000 0x10000>;
+			label = "0:APPSBLENV";
+		};
+
+		partition@520000 {
+			reg = <0x520000 0xa0000>;
+			label = "0:APPSBL_1";
+		};
+
+		partition@660000 {
+			reg = <0x660000 0x40000>;
+			label = "0:ART";
+		};
+
+		partition@2b0000 {
+			reg = <0x2b0000 0x1a0000>;
+			label = "0:QSEE";
+		};
+
+		partition@4b0000 {
+			reg = <0x4b0000 0x40000>;
+			label = "0:RPM";
+		};
+
+		partition@4f0000 {
+			reg = <0x4f0000 0x10000>;
+			label = "0:CDT_1";
+		};
+
+		partition@5c0000 {
+			reg = <0x5c0000 0xa0000>;
+			label = "0:APPSBL";
+		};
+
+		partition@0 {
+			reg = <0x00 0xc0000>;
+			label = "0:SBL1";
+		};
+
+		partition@c0000 {
+			reg = <0xc0000 0x10000>;
+			label = "0:MIBIB";
+		};
+
+		partition@d0000 {
+			reg = <0xd0000 0x20000>;
+			label = "0:BOOTCONFIG";
+		};
+
+		partition@f0000 {
+			reg = <0xf0000 0x20000>;
+			label = "0:BOOTCONFIG1";
+		};
 	};
 };
 
@@ -328,6 +409,18 @@
 	pinctrl-0 = <&qpic_pins>;
 	pinctrl-names = "default";
 	status = "ok";
+	
+	nandcs@0 {	
+		partition@0 {
+			reg = <0x00 0x3c00000>;
+			label = "rootfs_1";
+		};
+
+		partition@3c00000 {
+			reg = <0x3c00000 0x3c00000>;
+			label = "rootfs";
+		};
+	};
 };
 
 &nss_crypto {
