ipq60xx: unify wf188n profile
Signed-off-by: John Crispin <john@phrozen.org>

--- a/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
+++ b/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
@@ -175,14 +175,9 @@ $(call Package/ath11k-wifi-default)
     TITLE:=edgecore-oap101e bdf
 endef
 
-define Package/ath11k-wifi-cig-wf188n-ca
+define Package/ath11k-wifi-cig-wf188n
 $(call Package/ath11k-wifi-default)
-    TITLE:=cig-wf188n bdf CA
-endef
-
-define Package/ath11k-wifi-cig-wf188n-us
-$(call Package/ath11k-wifi-default)
-    TITLE:=cig-wf188n bdf US
+    TITLE:=cig-wf188n bdf
 endef
 
 define ath11k-wifi-install-one-to
@@ -365,16 +360,11 @@ define Package/ath11k-wifi-edgecore-oap101e/install
 	$(INSTALL_DATA) ./board-2-edgecore-oap101e.bin.QCN6122 $(1)/lib/firmware/ath11k/qcn6122/hw1.0/board-2.bin
 endef
 
-define Package/ath11k-wifi-cig-wf188n-ca/install
+define Package/ath11k-wifi-cig-wf188n/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/
-	$(INSTALL_DATA) ./board-cig-wf188n-ca.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin
-	echo -n 'CA MY DE' > $(1)/lib/firmware/country
-endef
-
-define Package/ath11k-wifi-cig-wf188n-us/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/
-	$(INSTALL_DATA) ./board-cig-wf188n-us.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin
-	echo -n 'US MY DE' > $(1)/lib/firmware/country
+	$(INSTALL_DATA) ./board-cig-wf188n-ca.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.CA
+	$(INSTALL_DATA) ./board-cig-wf188n-us.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.US
+	$(LN) /lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.US $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin
 endef
 
 $(eval $(call generate-ath11k-wifi-package,cig-wf186w,Cigtech WF186w))
@@ -423,5 +413,4 @@ $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4x_w))
 $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4xi_HMR))
 $(eval $(call BuildPackage,ath11k-wifi-edgecore-oap101))
 $(eval $(call BuildPackage,ath11k-wifi-edgecore-oap101e))
-$(eval $(call BuildPackage,ath11k-wifi-cig-wf188n-ca))
-$(eval $(call BuildPackage,ath11k-wifi-cig-wf188n-us))
+$(eval $(call BuildPackage,ath11k-wifi-cig-wf188n))
