--- a/profiles/cig_wf188n.yml
+++ b/profiles/cig_wf188n.yml
@@ -1,9 +1,9 @@
 ---
-profile: cig_wf188n-us
+profile: cig_wf188n
 target: ipq60xx
 subtarget: generic
 description: Build image for the Cigtech WF188n
-image: bin/targets/ipq60xx/generic/openwrt-ipq60xx-cig_wf188n-us-squashfs-sysupgrade.tar
+image: bin/targets/ipq60xx/generic/openwrt-ipq60xx-cig_wf188n-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
     path: ../../feeds/ipq807x_v5.4
