ipq807x: unify US/CA image for CIG WF196
Signed-off-by: John Crispin <john@phrozen.org>

--- a/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
+++ b/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
@@ -29,8 +29,6 @@ ALLWIFIBOARDS:= \
 	cig-wf660a \
 	cig-wf194c \
 	cig-wf194c4 \
-	cig-wf196-ca \
-	cig-wf196-us \
 	cybertan-eww622-a1 \
 	edgecore-eap101 \
 	gl-ax1800 \
@@ -89,14 +87,9 @@ $(call Package/ath11k-wifi-default)
     TITLE:=board-2.bin for QCOM IPQ6122 eval kits
 endef
 
-define Package/ath11k-wifi-cig-wf196_6g-ca
+define Package/ath11k-wifi-cig-wf196
 $(call Package/ath11k-wifi-default)
-    TITLE:=cig-wf196 6G bdf CA
-endef
-
-define Package/ath11k-wifi-cig-wf196_6g-us
-$(call Package/ath11k-wifi-default)
-    TITLE:=cig-wf196 6G bdf US
+    TITLE:=cig-wf196 bdf
 endef
 
 define Package/ath11k-wifi-gl-ax1800
@@ -257,16 +250,12 @@ define Package/ath11k-wifi-qcom-qcn9000/install
 	$(INSTALL_DATA) ./board-2.bin.QCN9000 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board-2.bin
 endef
 
-define Package/ath11k-wifi-cig-wf196_6g-ca/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
-	$(INSTALL_DATA) ./board-cig-wf196_6g-ca.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
-	echo -n 'CA' > $(1)/lib/firmware/country
-endef
-
-define Package/ath11k-wifi-cig-wf196_6g-us/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
-	$(INSTALL_DATA) ./board-cig-wf196_6g-us.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
-	echo -n 'US' > $(1)/lib/firmware/country
+define Package/ath11k-wifi-cig-wf196/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/ $(1)/lib/firmware/ath11k/IPQ8074/hw2.0/
+	$(INSTALL_DATA) ./board-cig-wf196_6g-ca.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin.CA
+	$(INSTALL_DATA) ./board-cig-wf196_6g-us.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin.US
+	$(INSTALL_DATA) ./board-cig-wf196-ca.bin.IPQ8074 $(1)/lib/firmware/ath11k/IPQ8074/hw2.0/board.bin.CA
+	$(INSTALL_DATA) ./board-cig-wf196-us.bin.IPQ8074 $(1)/lib/firmware/ath11k/IPQ8074/hw2.0/board.bin.US
 endef
 
 define Package/ath11k-wifi-optimcloud-d50/install
@@ -364,7 +353,6 @@ define Package/ath11k-wifi-cig-wf188n/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/
 	$(INSTALL_DATA) ./board-cig-wf188n-ca.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.CA
 	$(INSTALL_DATA) ./board-cig-wf188n-us.bin.IPQ6018 $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.US
-	$(LN) /lib/firmware/ath11k/IPQ6018/hw1.0/board.bin.US $(1)/lib/firmware/ath11k/IPQ6018/hw1.0/board.bin
 endef
 
 $(eval $(call generate-ath11k-wifi-package,cig-wf186w,Cigtech WF186w))
@@ -372,8 +360,6 @@ $(eval $(call generate-ath11k-wifi-package,cig-wf186h,Cigtech WF186h))
 $(eval $(call generate-ath11k-wifi-package,cig-wf660a,Cigtech WF660a))
 $(eval $(call generate-ath11k-wifi-package,cig-wf194c,Cigtech WF194c))
 $(eval $(call generate-ath11k-wifi-package,cig-wf194c4,Cigtech WF194c4))
-$(eval $(call generate-ath11k-wifi-package,cig-wf196-ca,Cigtech WF196 CA))
-$(eval $(call generate-ath11k-wifi-package,cig-wf196-us,Cigtech WF196 US))
 $(eval $(call generate-ath11k-wifi-package,cybertan-eww622-a1,CyberTan EWW622 A1))
 $(eval $(call generate-ath11k-wifi-package,sercomm-wallaby,Sercomm Kiwi))
 $(eval $(call generate-ath11k-wifi-package,wallys-dr6018,Wallys DR6018))
@@ -400,8 +386,7 @@ $(eval $(call BuildPackage,ath11k-wifi-qcom-ipq6122))
 $(eval $(call BuildPackage,ath11k-wifi-qcom-ipq8074))
 $(eval $(call BuildPackage,ath11k-wifi-qcom-ipq6018))
 $(eval $(call BuildPackage,ath11k-wifi-qcom-qcn9000))
-$(eval $(call BuildPackage,ath11k-wifi-cig-wf196_6g-ca))
-$(eval $(call BuildPackage,ath11k-wifi-cig-wf196_6g-us))
+$(eval $(call BuildPackage,ath11k-wifi-cig-wf196))
 $(eval $(call BuildPackage,ath11k-wifi-motorola-q14))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d50))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d60))
