--- a/profiles/cig_wf196.yml
+++ b/profiles/cig_wf196.yml
@@ -1,9 +1,9 @@
 ---
-profile: cig_wf196_us
+profile: cig_wf196
 target: ipq807x
 subtarget: generic
-description: Build image for the CIG WF196 (US)
-image: bin/targets/ipq807x/generic/openwrt-ipq807x-cig_wf196_us-squashfs-sysupgrade.tar
+description: Build image for the CIG WF196 
+image: bin/targets/ipq807x/generic/openwrt-ipq807x-cig_wf196-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
     path: ../../feeds/ipq807x_v5.4
