ipq50xx: add CIF WF-198 support
Signed-off-by: John Crispin <john@phrozen.org>

--- a/feeds/ipq95xx/ath12k-wifi/Makefile
+++ b/feeds/ipq95xx/ath12k-wifi/Makefile
@@ -19,7 +19,7 @@ define Package/ath12k-wifi-default
   SUBMENU:=ath12k Board-Specific Overrides
   SECTION:=firmware
   CATEGORY:=Firmware
-  DEPENDS:=@TARGET_qcn9274
+  DEPENDS:=@(TARGET_qcn9274||TARGET_ipq53xx)
   TITLE:=Custom Board
 endef
 
@@ -33,4 +33,15 @@ define Package/ath12k-wifi-qcom-qcn9274/install
 	$(INSTALL_DATA) ./board-2.bin.QCN9274 $(1)/lib/firmware/ath12k/QCN9274/hw1.0/board-2.bin
 endef
 
+define Package/ath12k-wifi-cig-wf198
+$(call Package/ath12k-wifi-default)
+    TITLE:=board.bin for CIG WF198
+endef
+
+define Package/ath12k-wifi-cig-wf198/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath12k/QCN92XX/hw1.0
+	$(INSTALL_DATA) ./board-cig-wf198.bin.qcn9224 $(1)/lib/firmware/ath12k/QCN92XX/hw1.0/board.bin
+endef
+
 $(eval $(call BuildPackage,ath12k-wifi-qcom-qcn9274))
+$(eval $(call BuildPackage,ath12k-wifi-cig-wf198))
