--- a/feeds/ipq95xx/ath12k-wifi/Makefile
+++ b/feeds/ipq95xx/ath12k-wifi/Makefile
@@ -38,10 +38,27 @@ $(call Package/ath12k-wifi-default)
     TITLE:=board.bin for CIG WF198
 endef
 
+define Package/ath12k-wifi-sercomm-ap72tip
+$(call Package/ath12k-wifi-default)
+    TITLE:=board.bin for Sercomm WIFI-7
+endef
+
 define Package/ath12k-wifi-cig-wf198/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath12k/QCN92XX/hw1.0
+	$(INSTALL_DIR) $(1)/lib/firmware/ath12k/QCN92XX/hw1.0 $(1)/lib/firmware/ath12k/IPQ5332/hw1.0
+	$(INSTALL_DATA) ./regdb.bin $(1)/lib/firmware/ath12k/QCN92XX/hw1.0/
 	$(INSTALL_DATA) ./board-cig-wf198.bin.qcn9224 $(1)/lib/firmware/ath12k/QCN92XX/hw1.0/board.bin
+	$(INSTALL_DATA) ./regdb.bin $(1)/lib/firmware/ath12k/IPQ5332/hw1.0/
+	$(INSTALL_DATA) ./board-cig-wf198.bin.ipq53xx $(1)/lib/firmware/ath12k/IPQ5332/hw1.0/board.bin
+endef
+
+define Package/ath12k-wifi-sercomm-ap72tip/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath12k/QCN92XX/hw1.0 $(1)/lib/firmware/ath12k/IPQ5332/hw1.0
+	$(INSTALL_DATA) ./regdb.bin $(1)/lib/firmware/ath12k/QCN92XX/hw1.0/
+	$(INSTALL_DATA) ./board-sercomm-ap72tip.bin.qcn9224 $(1)/lib/firmware/ath12k/QCN92XX/hw1.0/board.bin
+	$(INSTALL_DATA) ./regdb.bin $(1)/lib/firmware/ath12k/IPQ5332/hw1.0/
+	$(INSTALL_DATA) ./board-sercomm-ap72tip.bin.ipq53xx $(1)/lib/firmware/ath12k/IPQ5332/hw1.0/board.bin
 endef
 
 $(eval $(call BuildPackage,ath12k-wifi-qcom-qcn9274))
 $(eval $(call BuildPackage,ath12k-wifi-cig-wf198))
+$(eval $(call BuildPackage,ath12k-wifi-sercomm-ap72tip))
