--- a/feeds/ipq95xx/ipq53xx/files/arch/arm64/boot/dts/qcom/ipq5332-sercomm-mi01.2.dtsi
+++ b/feeds/ipq95xx/ipq53xx/files/arch/arm64/boot/dts/qcom/ipq5332-sercomm-mi01.2.dtsi
@@ -1,31 +1,18 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * IPQ5332 AP-MI01.6 board device tree source
+ * IPQ5332 AP-MI01.2 board device tree source
  *
  * Copyright (c) 2020-2021 The Linux Foundation. All rights reserved.
  * Copyright (c) 2022 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
-/dts-v1/;
 
-#include "ipq5332.dtsi"
-
-#ifdef __IPQ_MEM_PROFILE_512_MB__
-#include "ipq5332-512MB-memory.dtsi"
-#else
-#include "ipq5332-default-memory.dtsi"
-#endif
+#include "ipq5332-sercomm.dtsi"
 
 / {
-	#address-cells = <0x2>;
-	#size-cells = <0x2>;
-	model = "CIG WF198";
-	compatible = "cig,wf198", "qcom,ipq5332-ap-mi01.6", "qcom,ipq5332";
-	interrupt-parent = <&intc>;
-
 	aliases {
-		serial0 = &blsp1_uart0;
-		serial1 = &blsp1_uart1;
+		serial0 = &blsp1_uart0; /*console*/
+		serial1 = &blsp1_uart1; /*ble*/
 		ethernet0 = "/soc/dp1";
 		ethernet1 = "/soc/dp2";
 	};
@@ -36,28 +23,92 @@
 
 	soc {
 		pinctrl@1000000 {
-			serial_0_pins: serial0-pinmux {
+			serial_0_pins: serial0-pinmux {  /*console*/
 				pins = "gpio18", "gpio19";
 				function = "blsp0_uart0";
 				drive-strength = <8>;
 				bias-pull-up;
 			};
 
-			serial_1_pins: serial1-pinmux {
-				pins = "gpio33", "gpio34", "gpio35", "gpio36";
+			serial_1_pins: serial1-pinmux {  /*ble*/
+//				pins = "gpio33", "gpio34", "gpio35", "gpio36";
+				pins = "gpio33", "gpio35";
 				function = "blsp1_uart2";
 				drive-strength = <8>;
 				bias-pull-up;
 			};
+			
+			//serial_2_pins: serial2-pinmux {  /*gps*/
+			/*	pins = "gpio33", "gpio34", "gpio35", "gpio36";
+				function = "blsp1_uart1";
+				drive-strength = <8>;
+				bias-pull-up;
+			};*/
 
-			i2c_1_pins: i2c-1-pinmux {
-				pins = "gpio29", "gpio30";
-				function = "blsp1_i2c0";
+			i2c_0_pins: i2c-0-pinmux {
+				pins = "gpio43", "gpio45";
+				function = "blsp2_i2c0";
 				drive-strength = <8>;
 				bias-pull-up;
 			};
 
-			mdio1_pins: mdio1_pinmux {
+			
+			spi_0_pins: spi0-pinmux {
+				spi_clock {
+					pins = "gpio14";
+					function = "blsp0_spi";
+					drive-strength = <8>;
+					bias-pull-down;
+				};
+
+				spi_mosi {
+					pins = "gpio15";
+					function = "blsp0_spi";
+					drive-strength = <8>;
+					bias-pull-down;
+				};
+
+				spi_miso {
+					pins = "gpio16";
+					function = "blsp0_spi";
+					drive-strength = <8>;
+					bias-pull-down;
+				};
+
+				spi_cs {
+					pins = "gpio17";
+					function = "blsp0_spi";
+					drive-strength = <8>;
+					bias-pull-up;
+				};
+			};
+			
+			spi_1_pins: spi_1_pins { /* tpm */
+				mux {
+					pins = "gpio29", "gpio30", "gpio31", "gpio32";
+					function = "blsp1_spi0";
+					drive-strength = <8>;
+//					bias-disable;
+					bias-pull-up;
+				};
+			};
+			
+			mdio0_pins: mdio_pinmux {
+				mux_0 {
+					pins = "gpio25";
+					function = "mdc0";
+					drive-strength = <8>;
+					bias-disable;
+				};
+				mux_1 {
+					pins = "gpio26";
+					function = "mdio0";
+					drive-strength = <8>;
+					bias-pull-up;
+				};
+			};
+
+			mdio1_pins: mdio_pinmux {
 				mux_0 {
 					pins = "gpio27";
 					function = "mdc1";
@@ -71,86 +122,26 @@
 					bias-pull-up;
 				};
 			};
-
-			pwm_pins: pwm_pinmux {
-				mux_1 {
-					pins = "gpio26";
-					function = "pwm2";
-					drive-strength = <8>;
-				};
-				mux_2 {
-					pins = "gpio30";
-					function = "pwm1";
-					drive-strength = <8>;
-				};
-				mux_3 {
+/*
+			sfp_pins: sfp_pinmux {
+				sfp_rx {
 					pins = "gpio45";
-					function = "pwm0";
-					drive-strength = <8>;
+					function = "rx1";
+					bias-disable;
 				};
-			};
-
-			/*audio_pins_pri: audio_pinmux_pri {
-				mux_1 {
-					pins = "gpio29";
-					function = "audio_pri";
-					drive-strength = <8>;
-					bias-pull-down;
-				};
-
-				mux_2 {
-					pins = "gpio30";
-					function = "audio_pri";
-					drive-strength = <8>;
-					bias-pull-down;
-				};
-
-				mux_3 {
-					pins = "gpio31";
-					function = "audio_pri";
-					drive-strength = <4>;
-					bias-pull-down;
-				};
-
-				mux_4 {
-					pins = "gpio32";
-					function = "audio_pri";
-					drive-strength = <4>;
-					bias-pull-down;
-				};
-			};*/
-			
-			spi_2_pins: spi-2-pins {
-				pins = "gpio33", "gpio34", "gpio35", "gpio36";
-				function = "blsp2_spi0";
-				drive-strength = <8>;
-				bias-pull-down;
-			};
-
-			button_pins: button_pins {
-				rst_button {
-					pins = "gpio17";
+				sfp_tx {
+					pins = "gpio24";
 					function = "gpio";
 					drive-strength = <8>;
-					bias-pull-up;
+					bias-pull-down;
+					output-low;
 				};
-			};
+			};*/
 		};
 
+
+#if 1	//AQR114C
 		dp1 {
-			device_type = "network";
-			compatible = "qcom,nss-dp";
-			qcom,id = <2>;
-			reg = <0x3a504000 0x4000>;
-			qcom,mactype = <1>;
-			local-mac-address = [000000000000];
-			mdio-bus = <&mdio>;
-			qcom,phy-mdio-addr = <12>;
-			qcom,link-poll = <1>;
-			phy-mode = "sgmii";
-		};
-
-		dp2 {
 			device_type = "network";
 			compatible = "qcom,nss-dp";
 			qcom,id = <1>;
@@ -158,75 +149,134 @@
 			qcom,mactype = <1>;
 			local-mac-address = [000000000000];
 			mdio-bus = <&mdio>;
-			qcom,phy-mdio-addr = <8>;
+			qcom,phy-mdio-addr = <24>;
 			qcom,link-poll = <1>;
 			phy-mode = "sgmii";
-			qcom,ppe-offload-disabled = <1>;
-			qcom,is_switch_connected = <1>;
+		};	
+		dp2 {
+			device_type = "network";
+			compatible = "qcom,nss-dp";
+			qcom,id = <2>;
+			reg = <0x3a504000 0x4000>;
+			qcom,mactype = <1>;
+			local-mac-address = [000000000000];
+			qcom,phy-mdio-addr = <0>;
+			qcom,link-poll = <1>;
+			phy-mode = "sgmii";
 		};
 
-		pwm: pwm {
-			pinctrl-0 = <&pwm_pins>;
-			pinctrl-names = "default";
-			used-pwm-indices = <1>, <1>, <1>, <1>;
-			#pwm-cells = <2>;
-			status = "ok";
-		};
-
-		mdio:mdio@90000 {
+		mdio:mdio@90000 { 
 			status = "ok";
 			pinctrl-0 = <&mdio1_pins>;
 			pinctrl-names = "default";
-			/*gpio51 for manhattan reset*/
-			phy-reset-gpio = <&tlmm 14 0 &tlmm 20 0>;
-			phyaddr_fixup = <0xC90F018>;
-			uniphyaddr_fixup = <0xC90F014>;
-			mdio_clk_fixup; /* MDIO clock sequence fix up flag */
+			/*gpio0 for napa, gpio3 for AQR114C*/
+			//phy-reset-gpio = <&tlmm 0 0 &tlmm 3 0>;
+			phy-reset-gpio = <&tlmm 0 0>;
 
 			phy0: ethernet-phy@0 {
-				reg = <8>;
-				reset-gpios = <&tlmm 14 GPIO_ACTIVE_LOW>;
-				compatible ="ethernet-phy-ieee802.3-c45";
+				reg = <24>;
 			};
-			phy1: ethernet-phy@1 {
-				reg = <12>;
-				reset-gpios = <&tlmm 20 GPIO_ACTIVE_LOW>;
+			phy1: ethernet-phy@1 { //aqr114c
+				reg = <0>;
+				compatible ="ethernet-phy-ieee802.3-c45";
 			};
 		};
 
-
-		/*pcm: pcm@0xA3C0000{
-			pinctrl-0 = <&audio_pins_pri>;
-			pinctrl-names = "primary";
-			status = "disabled";
-		};*/
-
 		ess-instance {
-			num_devices = <0x1>;
 			ess-switch@3a000000 {
 				switch_cpu_bmp = <0x1>;  /* cpu port bitmap */
-				switch_lan_bmp = <0x2>; /* lan port bitmap */
-				switch_wan_bmp = <0x4>; /* wan port bitmap */
-				switch_mac_mode = <0xd>; /* mac mode for uniphy instance0*/
-				switch_mac_mode1 = <0xf>; /* mac mode for uniphy instance1*/
+				switch_lan_bmp = <0x0>; /* lan port bitmap */
+				switch_wan_bmp = <0x6>; /* wan port bitmap */
+				switch_mac_mode = <0xc>; /* mac mode for uniphy instance0*/
+				switch_mac_mode1 = <0xf>; /* mac mode for uniphy instance1  114c*/
 				switch_mac_mode2 = <0xff>; /* mac mode for uniphy instance2*/
-
 				qcom,port_phyinfo {
 					port@0 {
 						port_id = <1>;
-						phy_address = <8>;
-						mdiobus = <&mdio>;
+						phy_address = <24>;
+					};
+					port@1 { //aqr114c
+						port_id = <2>;
+						phy_address = <0>;
 						ethernet-phy-ieee802.3-c45;
+					};
+				};
+			};
+		};
+		
+#else	 //SFP
+		
+		dp1 {
+			device_type = "network";
+			compatible = "qcom,nss-dp";
+			qcom,id = <1>;
+			reg = <0x3a500000 0x4000>;
+			qcom,mactype = <1>;
+			local-mac-address = [000000000000];
+			mdio-bus = <&mdio>;
+			qcom,phy-mdio-addr = <24>;
+			qcom,link-poll = <1>;
+			phy-mode = "sgmii";
+		};
+		dp2 {
+			device_type = "network";
+			compatible = "qcom,nss-dp";
+			qcom,id = <2>;
+			reg = <0x3a504000 0x4000>;
+			qcom,mactype = <1>;
+			local-mac-address = [000000000000];
+			mdio-bus = <&mdio>;
+			qcom,phy-mdio-addr = <30>;
+			qcom,link-poll = <1>;
+			phy-mode = "sgmii";
+		};
+
+		mdio:mdio@90000 { 
+			status = "ok";
+			pinctrl-0 = <&mdio1_pins>;
+			pinctrl-names = "default";
+			/*gpio0 for napa, gpio3 for AQR114C*/
+			//phy-reset-gpio = <&tlmm 0 0 &tlmm 3 0>;
+			phy-reset-gpio = <&tlmm 0 0>;
+
+			phy0: ethernet-phy@0 {
+				reg = <24>;
+			};
+		};
+
+		ess-instance {
+			ess-switch@3a000000 {
+				switch_cpu_bmp = <0x1>;  /* cpu port bitmap */
+				switch_lan_bmp = <0x0>; /* lan port bitmap */
+				switch_wan_bmp = <0x6>; /* wan port bitmap */
+				switch_mac_mode = <0xc>; /* mac mode for uniphy instance0*/
+				switch_mac_mode1 = <0xe>; /* mac mode for uniphy instance1  sfp PORT_WRAPPER_10GBASE_R*/
+//				switch_mac_mode1 = <0xc>; /* mac mode for uniphy instance1  sfp PORT_WRAPPER_SGMII_PLUS*/
+				switch_mac_mode2 = <0xff>; /* mac mode for uniphy instance2*/
+				qcom,port_phyinfo {
+					port@0 {
+						port_id = <1>;
+						phy_address = <24>;
 					};
 					port@1 {
 						port_id = <2>;
-						phy_address = <12>;
-						mdiobus = <&mdio>;
+						phy_address = <30>;
+						media-type = "sfp"; 
 					};
 				};
-
 			};
+		};
+#endif
+		
+		nss-macsec0 {
+			compatible = "qcom,nss-macsec";
+			phy_addr = <24>;
+			mdiobus = <&mdio>;
+		};
+		
 
+		eud@78000 {
+			status = "disabled";
 		};
 
 		/* EDMA host driver configuration for the board */
@@ -297,24 +347,51 @@
 			pinctrl-names = "default";
 			status = "ok";
 		};
-
-		spi_2: spi@78b7000 {
-			pinctrl-0 = <&spi_2_pins>;
+		
+		i2c_0: i2c@78b7000 {
+			status = "ok";
+			pinctrl-0 = <&i2c_0_pins>;
 			pinctrl-names = "default";
-			cs-select = <0>;
-			status = "disabled";
 		};
 
-		i2c_1: i2c@78b6000 {
-			pinctrl-0 = <&i2c_1_pins>;
+		
+		spi@78b5000 {
+			pinctrl-0 = <&spi_0_pins>;
 			pinctrl-names = "default";
+			cs-select = <0>;
+			status = "ok";
+
+			m25p80@0 {
+				compatible = "n25q128a11";
+				#address-cells = <1>;
+				#size-cells = <1>;
+				reg = <0>;
+				spi-max-frequency = <50000000>;
+			};
+		};
+		
+		/*tpm*/
+		spi@78b6000 {
+			pinctrl-0 = <&spi_1_pins>;
+			pinctrl-names = "default";
+			cs-select = <0>;
+			status = "ok";
+
+			tpm: spi-tpm@0 {
+				#address-cells = <1>;
+				#size-cells = <1>;
+				compatible = "st,st33htpm-spi";
+				reg = <0>;
+				spi-max-frequency = <20000000>;
+				status = "okay";
+			};
 		};
 
 		dma@7984000 {
 			status = "ok";
 		};
 
-		nand: nand@79b0000 {
+		nand@79b0000 {
 			pinctrl-0 = <&qspi_nand_pins>;
 			pinctrl-names = "default";
 			status = "ok";
@@ -322,64 +399,28 @@
 
 		usb3@8A00000 {
 			status = "ok";
-			qcom,multiplexed-phy;
+			qcom,select-utmi-as-pipe-clk;
+			dwc3@8A00000 {
+				/delete-property/ #phy-cells;
+				/delete-property/ phys;
+				/delete-property/ phy-names;
+			};
 		};
 
-		ssuniphy_0: ssuniphy@4b0000 {
+		hs_m31phy@7b000 {
 			status = "ok";
 		};
 
-		hs_m31phy_0: hs_m31phy@7b000 {
+		phy_x2@4b1000 {
 			status = "ok";
-		};
-
-		pcie1_phy_x2: phy_x2@4b1000 {
-			status = "ok";
-		};
-
-		gpio_keys {
-			compatible = "gpio-keys";
-			pinctrl-0 = <&button_pins>;
-			pinctrl-names = "default";
-			button@1 {
-				label = "rst";
-				linux,code = <KEY_RESTART>;
-				gpios = <&tlmm 17 GPIO_ACTIVE_LOW>;
-				linux,input-type = <1>;
-				debounce-interval = <60>;
-			};
-		};
-
-		pwmleds {
-			compatible = "pwm-leds";
-			led1 {
-				label = "led1";
-				pwms = <&pwm 0 10000>;
-				max-brightness = <255>;
-			};
-			led2 {
-				label = "led2";
-				pwms = <&pwm 1 10000>;
-				max-brightness = <255>;
-			};
-			led3 {
-				label = "led3";
-				pwms = <&pwm 2 10000>;
-				max-brightness = <255>;
-			};
-			led4 {
-				label = "led4";
-				pwms = <&pwm 3 10000>;
-				max-brightness = <255>;
-			};
 		};
 
 		wsi: wsi {
 			id = <0>;
-			num_chip = <2>;
+			num_chip = <3>;
 		};
 
-		pcie1: pcie@18000000 {
+		pcie@18000000 {
 			status = "ok";
 			pcie1_rp {
 				reg = <0 0 0 0 0>;
@@ -393,41 +434,12 @@
 					memory-region = <0>, <&mhi_region1>;
 #else
 					memory-region = <&qcn9224_pcie1>;
-					qcom,board_id = <0x1019>;
+					qcom,board_id = <0x100f>;
 					qcom,wsi = <&wsi>;
 #endif
 				};
 			};
 		};
+
 	};
-};
-
-&wifi0 {
-	qcom,rproc = <&q6_wcss_pd1>;
-	qcom,rproc_rpd = <&q6v5_wcss>;
-	qcom,multipd_arch;
-	qcom,userpd-subsys-name = "q6v5_wcss_userpd1";
-#if defined(__CNSS2__)
-	mem-region = <&q6_region>;
-#else
-	memory-region = <&q6_region>;
-	qcom,wsi = <&wsi>;
-#endif
-	qcom,board_id = <0x16>;
-	status = "ok";
-};
-
-&mhi_region1 {
-	status = "ok";
-};
-
-&qcn9224_pcie1 {
-	status = "ok";
-};
-
-/* QCN9224 5G+6G */
-&wifi2 {
-	hremote_node = <&qcn9224_pcie1>;
-	board_id = <0x1019>;
-	status = "ok";
 };
