--- a/profiles/ikuai_sw8.yml
+++ b/profiles/ikuai_sw8.yml
@@ -1,15 +1,14 @@
 profile: ikuai_sw8
-target: ipq807x
-subtarget: ipq50xx
+target: ipq50xx
+subtarget: generic
 description: Build image for the ikuai sw8
-image: bin/targets/ipq807x/ipq50xx/openwrt-ipq5018-ikuai_sw8-squashfs-sysupgrade.tar
+image: bin/targets/ipq50xx/generic/openwrt-ipq5018-ikuai_sw8-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
-    path: ../../feeds/ipq807x
+    path: ../../feeds/ipq807x_v5.4
 include:
-  - wifi-ax
   - ucentral-ap
 packages:
-  - ipq807x
+  - ipq50xx
 diffconfig: |
   CONFIG_KERNEL_IPQ_MEM_PROFILE=512
